--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
 
     <!-- About -->
-    <section class="bg-outerspace px-10 py-20">
+    <section id="about" class="bg-outerspace px-10 py-20">
 
         <div class="mb-14 text-zinc-50 text-center md:w-[70%] md:mx-auto">
             <h3 class="mb-10 font-oswald uppercase text-3xl font-bold">À propos</h3>
@@ -118,7 +118,7 @@
 
     </section>
 
-    
+    <!--  -->
 
     <script src="/app.js"></script>
     
