add footer, change color, change details

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <!-- Navbar -->
         <nav class="
             fixed top-0 z-20 py-4 px-10 w-full 
-            bg-arsenic shadow-md 
+            bg-gunmetal shadow-md 
             grid grid-cols-none 
             text-zinc-50 uppercase font-medium
-            md:bg-transparent md:shadow-none md:text-outerspace md:static">
+            md:bg-transparent md:shadow-none md:text-yankeesblue md:static">
 
             <!-- Hamburger Btn -->
             <div class="flex justify-end px-1">
@@ -36,14 +36,14 @@
             </div>
 
             <!-- Menu -->
-            <ul class="toggle-menu hidden px-10 pt-4 flex flex-col md:pt-0 md:bg-transparent md:flex md:flex-row md:gap-12 md:justify-end">
-                <li class="py-2 text-center border-t border-outerspace md:border-none">
+            <ul class="toggle-menu hidden px-2 pt-4 flex flex-col md:pt-0 md:bg-transparent md:flex md:flex-row md:gap-12 md:justify-end">
+                <li class="link-menu py-2 text-center border-t border-yankeesblue md:border-none">
                     <a href="#about">A propos</a>
                 </li>
-                <li class="py-2 text-center border-t border-outerspace md:border-none">
+                <li class="link-menu py-2 text-center border-t border-yankeesblue md:border-none">
                     <a href="#work">Mon travail</a>
                 </li>
-                <li class="py-2 font-semibold text-center border-t border-outerspace md:border-none">
+                <li class="link-menu py-2 text-pink text-bold text-center border-t border-yankeesblue hover:scale-95 md:hover:transform-none md:border-none md:text-zinc-50 md:bg-yankeesblue md:px-3 md:rounded-md md:shadow-md">
                     <a href="mailto:elise.prts@gmail.com">Contact</a>
                 </li>
             </ul>
@@ -51,9 +51,9 @@
         </nav>
 
         <!-- Intro -->
-        <div id="about" class="w-full px-4 py-40 flex flex-col items-center gap-16 lg:flex-row lg:justify-center lg:gap-32 lg:px-10 lg:w-[70%] lg:mx-auto">
+        <div class="w-full px-4 py-40 flex flex-col items-center gap-16 lg:flex-row lg:justify-center lg:gap-32 lg:px-10 lg:w-[70%] lg:mx-auto">
             
-            <div class="uppercase text-outerspace text-center order-2 lg:order-1 lg:text-start">
+            <div class="uppercase text-yankeesblue text-center order-2 lg:order-1 lg:text-start">
                 <h1 class="mb-5 font-oswald font-bold text-7xl lg:text-8xl">
                     <span class="block">Elise</span>
                     <span class="block">Pourtois</span>
@@ -72,7 +72,7 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="bg-outerspace px-10 py-20">
+    <section id="about" class="bg-yankeesblue px-10 py-20">
 
         <!-- Text -->
         <div class="mb-14 text-zinc-50 text-center md:w-[70%] md:mx-auto">
@@ -87,19 +87,19 @@
                 <h4 class="mb-3 uppercase font-medium">Web development</h4>
                 <ul>
                     <li class="flex space-x-3 py-2 items-center">
-                        <img src="/assets/check.svg" alt="icône check" class="h-5">
+                        <i class="fa-solid fa-check text-orange"></i>
                         <span class="font-light">HTML & CSS(SASS)</span>
                     </li>
                     <li class="flex space-x-3 py-2 items-center">
-                        <img src="/assets/check.svg" alt="icône check" class="h-5">
+                        <i class="fa-solid fa-check text-orange"></i>
                         <span class="font-light">JavaScript, React</span>
                     </li>
                     <li class="flex space-x-3 py-2 items-center">
-                        <img src="/assets/check.svg" alt="icône check" class="h-5">
+                        <i class="fa-solid fa-check text-orange"></i>
                         <span class="font-light">Bootstrap, TailwindCSS</span>
                     </li>
                     <li class="flex space-x-3 py-2 items-center">
-                        <img src="/assets/check.svg" alt="icône check" class="h-5">
+                        <i class="fa-solid fa-check text-orange"></i>
                         <span class="font-light">PHP</span>
                     </li>
                 </ul>
@@ -109,11 +109,11 @@
                 <h4 class="mb-3 uppercase font-medium">Design</h4>
                 <ul>
                     <li class="flex space-x-3 py-2 items-center">
-                        <img src="/assets/check.svg" alt="icône check" class="h-5">
+                        <i class="fa-solid fa-check text-orange"></i>
                         <span class="font-light">Figma</span>
                     </li>
                     <li class="flex space-x-3 py-2 items-center">
-                        <img src="/assets/check.svg" alt="icône check" class="h-5">
+                        <i class="fa-solid fa-check text-orange"></i>
                         <span class="font-light">Photoshop</span>
                         <span class="font-light text-sm">(bases)</span>
                     </li>
@@ -124,7 +124,7 @@
     </section>
 
     <!-- Work -->
-    <section id="work" class="bg-arsenic px-10 py-20">
+    <section id="work" class="bg-gunmetal px-10 py-20">
 
         <h3 class="mb-14 text-zinc-50 font-oswald uppercase text-3xl font-bold xl:text-4xl">Mes projets</h3>
 
@@ -137,13 +137,13 @@
                 <img src="https://picsum.photos/300/150?random=1" alt="" class="h-80 object-cover rounded-t-md">
                 <!-- Content -->
                 <div class="p-5 bg-zinc-50 rounded-b-md">
-                    <div class="pb-5 text-outerspace">
+                    <div class="pb-5 text-yankeesblue">
                         <p class="font-oswald uppercase font-bold text-xl mb-3">Titre</p>
                         <p class="font-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos expedita tenetur, ab veniam ipsum illo consequatur reprehenderit ducimus voluptatum voluptates.</p>
                     </div>
                     <div class="text-end">
-                        <button href="#" class="h-10 w-10 bg-orange rounded-full">
-                            <i class="fa-solid fa-arrow-right text-zinc-50"></i>
+                        <button href="#" class="h-10 w-10 bg-gradient-to-l from-pink to-orange rounded-full">
+                            <i class="fa-solid fa-plus text-zinc-50"></i>
                         </button>
                     </div>
                 </div>
@@ -155,13 +155,13 @@
                 <img src="https://picsum.photos/300/150?random=2" alt="" class="h-80 object-cover rounded-t-md">
                 <!-- Content -->
                 <div class="p-5 bg-zinc-50 rounded-b-md">
-                    <div class="pb-5 text-outerspace">
+                    <div class="pb-5 text-yankeesblue">
                         <p class="font-oswald uppercase font-bold text-xl mb-3">Titre</p>
                         <p class="font-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos expedita tenetur, ab veniam ipsum illo consequatur reprehenderit ducimus voluptatum voluptates.</p>
                     </div>
                     <div class="text-end">
-                        <button href="#" class="h-10 w-10 bg-orange rounded-full">
-                            <i class="fa-solid fa-arrow-right text-zinc-50"></i>
+                        <button href="#" class="h-10 w-10 bg-gradient-to-l from-pink to-orange rounded-full">
+                            <i class="fa-solid fa-plus text-zinc-50"></i>
                         </button>
                     </div>
                 </div>
@@ -173,13 +173,13 @@
                 <img src="https://picsum.photos/300/150?random=3" alt="" class="h-80 object-cover rounded-t-md">
                 <!-- Content -->
                 <div class="p-5 bg-zinc-50 rounded-b-md">
-                    <div class="pb-5 text-outerspace">
+                    <div class="pb-5 text-yankeesblue">
                         <p class="font-oswald uppercase font-bold text-xl mb-3">Titre</p>
                         <p class="font-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos expedita tenetur, ab veniam ipsum illo consequatur reprehenderit ducimus voluptatum voluptates.</p>
                     </div>
                     <div class="text-end">
-                        <button href="#" class="h-10 w-10 bg-orange rounded-full">
-                            <i class="fa-solid fa-arrow-right text-zinc-50"></i>
+                        <button href="#" class="h-10 w-10 bg-gradient-to-l from-pink to-orange rounded-full">
+                            <i class="fa-solid fa-plus text-zinc-50"></i>
                         </button>
                     </div>
                 </div>
@@ -191,13 +191,13 @@
                 <img src="https://picsum.photos/300/150?random=4" alt="" class="h-80 object-cover rounded-t-md">
                 <!-- Content -->
                 <div class="p-5 bg-zinc-50 rounded-b-md">
-                    <div class="pb-5 text-outerspace">
+                    <div class="pb-5 text-yankeesblue">
                         <p class="font-oswald uppercase font-bold text-xl mb-3">Titre</p>
                         <p class="font-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos expedita tenetur, ab veniam ipsum illo consequatur reprehenderit ducimus voluptatum voluptates.</p>
                     </div>
                     <div class="text-end">
-                        <button href="#" class="h-10 w-10 bg-orange rounded-full">
-                            <i class="fa-solid fa-arrow-right text-zinc-50"></i>
+                        <button href="#" class="h-10 w-10 bg-gradient-to-l from-pink to-orange rounded-full">
+                            <i class="fa-solid fa-plus text-zinc-50"></i>
                         </button>
                     </div>
                 </div>
@@ -209,13 +209,13 @@
                 <img src="https://picsum.photos/300/150?random=5" alt="" class="h-80 object-cover rounded-t-md">
                 <!-- Content -->
                 <div class="p-5 bg-zinc-50 rounded-b-md">
-                    <div class="pb-5 text-outerspace">
+                    <div class="pb-5 text-yankeesblue">
                         <p class="font-oswald uppercase font-bold text-xl mb-3">Titre</p>
                         <p class="font-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos expedita tenetur, ab veniam ipsum illo consequatur reprehenderit ducimus voluptatum voluptates.</p>
                     </div>
                     <div class="text-end">
-                        <button href="#" class="h-10 w-10 bg-orange rounded-full">
-                            <i class="fa-solid fa-arrow-right text-zinc-50"></i>
+                        <button href="#" class="h-10 w-10 bg-gradient-to-l from-pink to-orange rounded-full">
+                            <i class="fa-solid fa-plus text-zinc-50"></i>
                         </button>
                     </div>
                 </div>
@@ -227,13 +227,13 @@
                 <img src="https://picsum.photos/300/150?random=6" alt="" class="h-80 object-cover rounded-t-md">
                 <!-- Content -->
                 <div class="p-5 bg-zinc-50 rounded-b-md">
-                    <div class="pb-5 text-outerspace">
+                    <div class="pb-5 text-yankeesblue">
                         <p class="font-oswald uppercase font-bold text-xl mb-3">Titre</p>
                         <p class="font-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos expedita tenetur, ab veniam ipsum illo consequatur reprehenderit ducimus voluptatum voluptates.</p>
                     </div>
                     <div class="text-end">
-                        <button href="#" class="h-10 w-10 bg-orange rounded-full">
-                            <i class="fa-solid fa-arrow-right text-zinc-50"></i>
+                        <button href="#" class="h-10 w-10 bg-gradient-to-l from-pink to-orange rounded-full">
+                            <i class="fa-solid fa-plus text-zinc-50"></i>
                         </button>
                     </div>
                 </div>
@@ -243,6 +243,26 @@
 
 
     </section>
+
+    <!-- Footer -->
+    <footer class="flex justify-between items-start px-10 py-10 bg-yankeesblue">
+
+        <div class="text-zinc-50">
+            <p class="font-oswald uppercase font-bold text-xl mb-2">Elise Pourtois</p>
+            <a href="mailto:elise.prts@gmail.com" class="text-pink font-semibold hover:underline">Contact</a>
+            <div class="mt-3 space-x-4">
+                <a href="https://www.linkedin.com/in/epourtois/">
+                    <i class="fa-brands fa-linkedin text-3xl"></i>
+                </a>
+                <a href="https://github.com/eliseprts" target="_blank">
+                    <i class="fa-brands fa-github text-3xl"></i>
+                </a>
+            </div>
+        </div>
+
+        <a href="/assets/ElisePourtois_CV2022.pdf" target="_blank" class="py-2 px-3 bg-gradient-to-l from-pink to-orange rounded-md shadow-md text-yankeesblue hover:scale-95">Mon CV</a>
+
+    </footer>
 
     <script src="/app.js"></script>
     
