--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="font-montserrat">
 
     <!-- Navbar + Intro -->
-    <section class="bg-gradient-to-bl from-pink to-orange relative"> 
+    <section class="bg-gradient-to-bl from-pink to-orange"> 
 
         <!-- Navbar -->
         <nav class="
@@ -37,13 +37,13 @@
 
             <!-- Menu -->
             <ul class="toggle-menu hidden px-2 pt-4 flex flex-col md:pt-0 md:bg-transparent md:flex md:flex-row md:gap-12 md:justify-end">
-                <li class="link-menu py-2 text-center border-t border-yankeesblue md:border-none">
-                    <a href="#about">A propos</a>
+                <li class="py-2 text-center border-t border-yankeesblue md:border-none">
+                    <a href="#about" class="smooth-scrool-link">A propos</a>
                 </li>
-                <li class="link-menu py-2 text-center border-t border-yankeesblue md:border-none">
-                    <a href="#work">Mon travail</a>
+                <li class="py-2 text-center border-t border-yankeesblue md:border-none">
+                    <a href="#work" class="smooth-scrool-link">Mon travail</a>
                 </li>
-                <li class="link-menu py-2 text-pink text-bold text-center border-t border-yankeesblue hover:scale-95 md:hover:transform-none md:border-none md:text-zinc-50 md:bg-yankeesblue md:px-3 md:rounded-md md:shadow-md">
+                <li class="py-2 text-pink text-bold text-center border-t border-yankeesblue md:hover:transform-none md:border-none md:text-zinc-50 md:bg-yankeesblue md:px-3 md:rounded-md md:shadow-md">
                     <a href="mailto:elise.prts@gmail.com">Contact</a>
                 </li>
             </ul>
@@ -59,7 +59,7 @@
                     <span class="block">Pourtois</span>
                 </h1>
                 <h2 class="mb-16 font-light text-xl lg:text-2xl">Junior frontend developer</h2>
-                <a href="#work" class="py-4 px-6 bg-zinc-50 rounded-md shadow-md font-oswald font-bold text-lg hover:bg-zinc-50/90 hover:ring-2 hover:ring-pink">Voir mon travail</a>
+                <a href="#work" class="py-4 px-6 bg-zinc-50 rounded-md shadow-md font-oswald font-bold text-lg hover:bg-zinc-50/90 hover:ring-2 hover:ring-pink hover:scale-95">Voir mon travail</a>
             </div>
 
             <div class="relative flex items-center justify-center order-1 lg:order-2">
@@ -101,6 +101,10 @@
                     <li class="flex space-x-3 py-2 items-center">
                         <i class="fa-solid fa-check text-orange"></i>
                         <span class="font-light">PHP</span>
+                    </li>
+                    <li class="flex space-x-3 py-2 items-center">
+                        <i class="fa-solid fa-check text-orange"></i>
+                        <span class="font-light">WordPress</span>
                     </li>
                 </ul>
             </div>
@@ -249,7 +253,7 @@
 
         <div class="text-zinc-50">
             <p class="font-oswald uppercase font-bold text-xl mb-2">Elise Pourtois</p>
-            <a href="mailto:elise.prts@gmail.com" class="text-pink font-semibold hover:underline">Contact</a>
+            <a href="mailto:elise.prts@gmail.com" class="text-pink font-semibold">Contactez-moi</a>
             <div class="mt-3 space-x-4">
                 <a href="https://www.linkedin.com/in/epourtois/">
                     <i class="fa-brands fa-linkedin text-3xl"></i>
