display modal work in progress

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="font-montserrat bg-yankeesblue">
 
     <!-- MODAL -->
-    <!-- <div class="hidden modal-container fixed top-0 w-[100vw] h-[100vh] z-50 text-yankeesblue">
+    <div class="hidden modal-container fixed top-0 w-[100vw] h-[100vh] z-50 text-yankeesblue">
 
         <div class="modal-trigger absolute w-[100%] h-[100%] bg-slate-300/50 cursor-pointer"></div>
 
@@ -32,7 +32,7 @@
             <p class="mt-4 font-light">N'hésite pas à revenir régulièrement pour voir l'évolution 😉</p>
         </div>
 
-    </div> -->
+    </div>
 
     <!-- TOP BUTTON -->
     
